--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,28 +1,34 @@
-<div align="center">
-    <mat-card *ngIf="loaded" class="items-table">
-        <mat-table [dataSource]="tasks">
-            <ng-container matColumnDef="itemNum">
-                <mat-header-cell *matHeaderCellDef>№</mat-header-cell>
-                <mat-cell *matCellDef="let item">{{ item.num }}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="itemName">
-                <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-                <mat-cell *matCellDef="let item">{{ item.name }}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="itemAuthor">
-                <mat-header-cell *matHeaderCellDef>Author</mat-header-cell>
-                <mat-cell *matCellDef="let item">{{ item.author }}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="itemPriority">
-                <mat-header-cell *matHeaderCellDef>Priority</mat-header-cell>
-                <mat-cell *matCellDef="let item">{{ item.priority }}</mat-cell>
-            </ng-container>
-            <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
-            <mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></mat-row>
-        </mat-table>
-    </mat-card>
-    <mat-card *ngIf="errorMessage" class="error-message">{{ errorMessage }}</mat-card>
-    <mat-progress-spinner mode="indeterminate" *ngIf="!loaded && !errorMessage"></mat-progress-spinner>
-    <button mat-button (click)="reloadData()">Reload</button>
-    <button mat-button (click)="signOut()">Sign Out</button>
+<div class="main-container" align="center">
+    <div class="toolbar-container">
+        <button mat-button (click)="reloadData()">Reload</button>
+        <button mat-button (click)="signOut()">Sign Out</button>
+    </div>
+    <div class="list-container">
+        <mat-card *ngIf="loaded" class="items-table">
+            <div class="card-container">
+                <mat-table [dataSource]="tasks">
+                <ng-container matColumnDef="itemNum">
+                    <mat-header-cell *matHeaderCellDef>№</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{ item.num }}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="itemName">
+                    <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{ item.name }}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="itemAuthor">
+                    <mat-header-cell *matHeaderCellDef>Author</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{ item.author }}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="itemPriority">
+                    <mat-header-cell *matHeaderCellDef>Priority</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{ item.priority }}</mat-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
+                <mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></mat-row>
+            </mat-table>
+            </div>
+        </mat-card>
+        <mat-card align="center" *ngIf="errorMessage" class="error-message">{{ errorMessage }}</mat-card>
+        <mat-progress-spinner mode="indeterminate" *ngIf="!loaded && !errorMessage"></mat-progress-spinner>
+    </div>
 </div>
