--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div align="center">
-    <mat-card class="login-form">
+<div class="login-form-container">
+    <mat-card align="center">
         <mat-card-content>
             <form>
                 <mat-form-field class="form-input">
