--- a/src/app/components/list/list.component.css
+++ b/src/app/components/list/list.component.css
@@ -1,11 +1,32 @@
+.main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.toolbar-container {
+    flex: 0 0 auto;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.list-container {
+    flex: 1 1 auto;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
 .items-table {
     width: 70%;
+    flex: 1 1 auto;
 }
 
 .error-message {
-    width: 20%;
-}
-
-.mat-column-itemNum {
-    flex: 0 0 5%;
+    height: 5%;
+    width: 30%;
 }
